Squash merge TheIronWolf fork vr-dx9-rel-090923
https://github.com/TheIronWolfModding/dxvk/tree/vr-dx9-rel-090923

--- a/dxvk.conf
+++ b/dxvk.conf
@@ -231,6 +231,11 @@
 # shading. May improve visual clarity at a significant performance cost, but
 # may also introduce visual issues in some games.
 #
+# Produces AA that looks similar to SGSSAA and is beneficial in
+# some games, for example gMotor 2.0 based games.
+#
+# Requires MSAA enabled.
+#
 # Supported values: True, False
 
 # d3d11.forceSampleRateShading = False
@@ -463,6 +468,7 @@
 
 # d3d9.enableDialogMode = False
 
+
 # Overrides the application's MSAA level on the swapchain
 # 
 # Supported values: -1 (application) and 0 to 16 (user override)
@@ -481,6 +487,7 @@
 
 # d3d9.longMad = False
 
+
 # Device Local Constant Buffers
 #
 # Enables using device local, host accessible memory for constant buffers in D3D9.
@@ -498,6 +505,7 @@
 #
 # Supported values:
 # - True/False
+
 
 # d3d9.supportDFFormats = True
 
@@ -520,6 +528,7 @@
 
 # d3d9.supportX4R4G4B4 = True
 
+
 # Support D32
 #
 # Support the D32 format.
@@ -528,6 +537,7 @@
 # - True/False
 
 # d3d9.supportD32 = True
+
 
 # Disable A8 as a Render Target
 #
@@ -538,6 +548,7 @@
 # - True/False
 
 # d3d9.disableA8RT = False
+
 
 # Support for VCache Query
 #
@@ -551,6 +562,7 @@
 # Defaults to True if vendorId == 0x10de
 # d3d9.supportVCache = True
 
+
 # Force Sampler Type Spec Constants
 #
 # Useful if games use the wrong image and sampler
@@ -561,6 +573,7 @@
 # - True/False
 
 # d3d9.forceSamplerTypeSpecConstants = False
+
 
 # Force Aspect Ratio
 #
@@ -595,6 +608,7 @@
 
 # d3d9.cachedDynamicBuffers = False
 
+
 # Seamless Cubes
 #
 # Don't use non seamless cube maps even if they are supported.
@@ -604,6 +618,7 @@
 # - True/False
 
 # d3d9.seamlessCubes = False
+
 
 # Debug Utils
 #
@@ -615,6 +630,7 @@
 
 # dxvk.enableDebugUtils = False
 
+
 # Memory limit for locked D3D9 textures
 #
 # How much virtual memory will be used for textures (in MB).
@@ -623,3 +639,27 @@
 # DO NOT CHANGE THIS UNLESS YOU HAVE A VERY GOOD REASON.
 
 # d3d9.textureMemory = 100
+
+
+# Memory limit for locked D3D9 buffers
+#
+# How much virtual memory will be used for buffers (in MB).
+# 0 to disable the limit.
+
+# d3d9.bufferMemory = 100
+
+
+# Experimental: forced Sample Rate Shading factor
+#
+# If dxvk.forceSampleRateShading is True, controls resulting
+# AA sharpness.
+#
+# Valid value range:
+# - [0.0, 1.0]
+
+# dxvk.forceSampleRateShadingFactor = 1.0
+
+
+# Force VK_FORMAT_D32_SFLOAT_S8_UINT depth stencil format.
+
+# d3d9.forceD32FS8DepthStencil = False
