--- a/src/d3d9/meson.build
+++ b/src/d3d9/meson.build
@@ -41,6 +41,7 @@ d3d9_src = [
   'd3d9_swvp_emu.cpp',
   'd3d9_format_helpers.cpp',
   'd3d9_hud.cpp',
+  'd3d9_vr.cpp',
   'd3d9_annotation.cpp',
   'd3d9_mem.cpp',
   'd3d9_window.cpp',
